refactor: integrate swagger ui activation
